Refactor code for improved readability and consistency; update formatting settings in configuration files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
+  "editor.formatOnSave": true,
   "tailwindCSS.emmetCompletions": true,
   "tailwindCSS.classAttributes": [
     "classnames",
